refactor: add IKeyPairCipher interface